--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5"
   },
