--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-select": "^5.8.0",
+    "react-timer-hook": "^3.0.7",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5"
   },
